--- a/app/vue/style/main.scss
+++ b/app/vue/style/main.scss
@@ -30,3 +30,104 @@ pre {
   border: 1px solid #d8d8d8;
   border-radius: 2px;
 }
+
+
+/* Always set the map height explicitly to define the size of the div
+ * element that contains the map. */
+#map {
+  height: 100%;
+}
+/* Optional: Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+#description {
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+#infowindow-content .title {
+  font-weight: bold;
+}
+
+#infowindow-content {
+  display: none;
+}
+
+#map #infowindow-content {
+  display: inline;
+}
+
+.pac-card {
+  margin: 10px 10px 0 0;
+  border-radius: 2px 0 0 2px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  outline: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+  font-family: Roboto;
+}
+
+#pac-container {
+  /* padding-bottom: 12px; */
+  /* margin-right: 12px; */
+}
+
+.pac-controls {
+  display: inline-block;
+  padding: 5px 11px;
+}
+
+.pac-controls label {
+  font-family: Roboto;
+  font-size: 13px;
+  font-weight: 300;
+}
+
+#pac-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 400px;
+}
+
+#pac-input:focus {
+  border-color: #C43179;
+}
+
+#title {
+  color: #fff;
+  background-color: #C43179;
+  font-size: 25px;
+  font-weight: 500;
+  padding: 6px 12px;
+}
+
+#place-list {
+  position: absolute;
+  right: 50px;
+  bottom: 2px;
+  border: 1px solid #333;
+  color: #FFF;
+  height: 200px;
+  width: 32%;
+  background-color: grey;
+  opacity: .70;
+  font-family: Roboto;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+#upvoteBut{
+
+}
+#downvoteBut{
+
+}
